--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,7 @@
     font-family: 'outfit';
     src: url('/assets/fonts/Outfit-VariableFont_wght.ttf');
 }
+
 html {
     scroll-behavior: smooth;
 }
@@ -19,37 +20,6 @@ body {
     text-decoration: none;
 }
 
-.big-title {
-    font-size: 100px;
-    animation: font-size-inc .5s ease;
-
-}
-
-.small-title {
-    animation: font-size-dec .5s ease;
-    font-size: 50px;
-}
-
-.big-container {
-    height: 100vh;
-    animation: height-inc 0.5s ease;
-}
-
-.small-container {
-    height: 100px;
-    animation: height-dec 0.5s ease;
-}
-
-.big-blur {
-    margin-left: -410.8px;
-    animation: margin-inc .5s ease;
-}
-
-.small-blur {
-    margin-left: -205.9px;
-    animation: margin-dec .5s ease;
-}
-
 .text-container {
     position: fixed;
     display: -webkit-box;
@@ -58,6 +28,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+
     width: 100vw;
 }
 
@@ -70,6 +41,7 @@ body {
 }
 
 .title-text {
+
     position: relative;
     animation: fade-in 1.98s cubic-bezier(0.56, 0.44, 0.29, 1);
     transition: all .5s ease-in-out;
@@ -87,13 +59,12 @@ body {
 .title-rainbow {
     color: #00000000;
     background: linear-gradient(to right,
-            rgb(241, 159, 241), rgb(131, 65, 179), rgb(241, 159, 241));
+            rgb(241, 159, 241), #8341b3, #f19ff1);
     background-size: 200%;
     background-clip: text;
     white-space: nowrap;
     animation: bg-pan 3s linear infinite;
     animation: all 0.5s ease;
-
 }
 
 .rainbow-blur {
@@ -106,10 +77,7 @@ body {
     animation: bg-pan 3s linear infinite;
     background-size: 200%;
     font-weight: bold;
-}
 
-.small-margin {
-    margin-left: 205.9px;
 }
 
 #scroll-triangle {
@@ -128,7 +96,6 @@ body {
     -webkit-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
-    opacity: 0;
 }
 
 #triangle-container {
